2001-03-17  Mark Kettenis  <kettenis@gnu.org>

	* i387-nat.h: Doc Fix.

	* i386-tdep.c: Fix formatting.
	(i386_get_frame_setup, i386_follow_jump, codestream_read,
	codestream_seek, codestream_fill, skip_trampoline_code,
	gdb_print_insn_i386, _initialize_i386_tdep): Remove redundant
	prototypoes.

2001-03-17  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-linux.h (TARGET_ANALYZE_FLOATING): Remove.  It's
	no longer used.  Also remove associated FIXME.

2001-03-16  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh: Add classes ``m'' and ``M'' for pure multi-arch.  Do
	not generate macro wrappers for multi-arch functions or
	predicates.
	(class_is_info_p, class_is_predicate_p): Update.
	(class_is_function_p, class_is_variable_p): Ditto.
	(class_is_multiarch_p): New class function.

2001-03-16  J.T. Conklin  <jtc@redback.com>

	* config/h8300/tm-h8300.h (FRAME_ARGS_ADDRESS): Changed to use
	h8300_frame_args_address from frame_args_address.
	(FRAME_LOCALS_ADDRESS): Changed to use h8300_frame_locals_address
	from frame_locals_address.
	(PRINT_REGISTER_HOOK): Changed to use h8300_print_register_hook
	from print_register_hook.
	(h8300_frame_args_address): Declare.
	(h8300_frame_find_saved_regs): Declare.
	(h8300_frame_locals_address): Declare.
	(h8300_frame_saved_pc): Declare.
	(h8300_pop_frame): Declare.
	(h8300_print_register_hook): Declare.
	* h8300-tdep.c (h8300_frame_find_saved_regs): Removed declaration.
	(h8300_frame_args_address): Renamed from frame_args_address.
	(h8300_frame_locals_address): Renamed from frame_locals_address.
	(h8300_pop_frame): Renamed from pop_frame.
	(h8300_print_register_hook): Renamed from print_register_hook.

2001-03-16  Kevin Buettner  <kevinb@redhat.com>

	* solib-svr4.c (bfd_lookup_symbol):  Change type of
	``storage_needed'' from unsigned int to long in order to
	match return type of bfd_get_symtab_upper_bound() and
	bfd_get_dynamic_symtab_upper_bound().
	* solib-aix5.c (bfd_lookup_symbol): Likewise.  Also, eliminate